--- a/logstyle.css
+++ b/logstyle.css
@@ -52,7 +52,7 @@ body {
     text-align: center;
     font-size: 4rem;
     font-weight: bold;
-    color: rgb(240, 5, 142);
+    color: rgb(28, 4, 207);
     font-family: "Dr Sugiyama", serif;;
 }
 
@@ -94,10 +94,13 @@ body {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+   
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
 }
 
 .login-form button:hover {
-    background: #0056b3;
+    background: #00b327;
+    transform: translateY(-3px);
 }
 
 
@@ -106,6 +109,9 @@ body {
     align-items: center;
     padding: 50px;
     flex-wrap: wrap;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    margin: 20px;
 }
 
 .section:nth-child(even) {
@@ -113,7 +119,8 @@ body {
 }
 
 .desc {
-   
+    display: flex;
+   flex-direction: column;
     color: #0f4994;
     font-size: 1.5rem;
     font-weight: bold;
@@ -159,22 +166,23 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px;
+    padding: 50px;
     background: #fff;
 }
 
 .get-started {
-    padding: 15px 30px;
-    font-size: 18px;
+    padding: 15px 40px;
+    font-size: 20px;
     font-weight: bold;
     color: white;
-    background-color: #007bff;
+    background: linear-gradient(90deg, #007bff, #0056b3);
     border: none;
-    border-radius: 5px;
+    border-radius: 30px;
     cursor: pointer;
- 
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .get-started:hover {
-    background-color: #0056b3;
+    transform: translateY(-3px);
+    background: #0f0568;
 }
